hphp/test/zend/good/Zend/tests/errmsg_006.php.expectf

Fatal error: Can't use [] for reading in %s/errmsg_006.php on line 4
